<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/favouriteFragment"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/favourite" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_history_black"
            android:title="@string/history" />


    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings" />
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>