<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.brandstore.Fragments.HomeFragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.brandstore.Fragments.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.brandstore.Fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.brandstore.Fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.brandstore.Fragments.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.brandstore.Fragments.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket"/>
</navigation>